feat: add advanced report filters
